test/mlir/cast_bad_case_2.mlir.stderr
test/mlir/cast_bad_case_2.mlir:5:8: error: 'colgm.cast' op cannot cast between scalar and tensor type
  %0 = colgm.cast %arg : i64 -> tensor<f32>
       ^
test/mlir/cast_bad_case_2.mlir:5:8: note: see current operation: %0 = "colgm.cast"(%arg0) : (i64) -> tensor<f32>
